# fuzzycocopython

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakelists.txt  README.md  Untitled-1.ipynb  demo.ipynb  fuzzySystem.ffs  genindex.html  index.html  objects.inv  parameters.html  pyproject.toml  quickstart.html  search.html  searchindex.js  testscript.py  todo.md
.doctrees/: index.doctree  parameters.doctree  quickstart.doctree
.doctrees/api/: index.doctree
.github/workflows/: build.yml  build_and_test.yml  docs.yml  main.yml  publish.yml  tests.yml
_modules/: index.html
_modules/fuzzycocopython/: fuzzycoco_base.html  fuzzycoco_plot_mixin.html
_sources/: quickstart.rst.txt
_sources/api/: index.rst.txt
api/: index.html
bindings/: CMakeLists.txt  bindings.cpp
docs/: conf.py  index.md  parameters.rst  quickstart.rst  requirements.txt
fuzzycoco/: CMakeLists.txt
fuzzycoco/src/: CMakeLists.txt  bindings.cpp  bitarray.cpp  bitarray.h  coevolution_engine.cpp  coevolution_engine.h  crossover_method.cpp  crossover_method.h  dataframe.cpp  dataframe.h  discretizer.h  evolution_engine.cpp  evolution_engine.h  evolution_params.h  file_utils.cpp  file_utils.h  fuzzy_coco.cpp  fuzzy_coco.h  fuzzy_coco_executable.cpp  fuzzy_coco_params.cpp  fuzzy_coco_params.h  fuzzy_coco_script_runner.cpp  fuzzy_coco_script_runner.h  fuzzy_operator.h  fuzzy_rule.cpp  fuzzy_rule.h  fuzzy_rules_genotype.h  fuzzy_set.h  fuzzy_system.cpp  fuzzy_system.h  fuzzy_system_fitness.cpp  fuzzy_system_fitness.h  fuzzy_system_metrics.h  fuzzy_system_metrics_computer.cpp  fuzzy_system_metrics_computer.h  fuzzy_variable.cpp  fuzzy_variable.h  fuzzy_variables_db.cpp  fuzzy_variables_db.h  genome.h  (+13 more)
fuzzycoco/src/duktape/: duktape.h
fuzzycocopython/: CMakeLists_20250327171926.txt  __init__.py  demo-notebook.ipynb  fuzzycoco_base.py  fuzzycoco_classifier.py  fuzzycoco_plot_mixin.py  fuzzycoco_regressor.py  fuzzysystem.ffs  model.py  output_file.md  params.py  test.ipynb  testfuzzy.ffs  utils.py
tests/: test_estimator.py  test_fuzzycocopython.py  test_utils.py
