[project]
name = "fuzzycocopython"
version = "0.0.1"
description = "Python API for FuzzyCoco using C++ bindings"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Arthur Babey", email = "arthur.babey@heig-vd.ch"}
]
dependencies = [
    "numpy",
    "scikit-learn>=1.1.3",
    "pandas>2.0",
    "lfa_toolbox @ git+https://github.com/arthurbabey/lfa_toolbox.git@master",
]

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.verbose = true
logging.level = "INFO"
# Use a per-tag build dir to avoid reusing caches across different paths/ABIs
build-dir = "build/{wheel_tag}"

[tool.setuptools.package-data]
fuzzycocopython = ["*.so"]  # Ensure .so files are installed with the package
