[project]
name = "fuzzycocopython"
version = "0.0.1"
description = "Python API for FuzzyCoco using C++ bindings"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Arthur Babey", email = "arthur.babey@heig-vd.ch"}
]
license = {text = "AGPL-3.0-or-later"}
keywords = ["fuzzycoco", "fuzzy-logic", "sklearn", "bindings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "scikit-learn>=1.1.3",
    "pandas>2.0",
    "lfa_toolbox @ git+https://github.com/arthurbabey/lfa_toolbox.git@master",
    "joblib",
]

[project.urls]
Homepage = "https://github.com/arthurbabey/fuzzycocopython"
Documentation = "https://arthurbabey.github.io/fuzzycocopython/"
Issues = "https://github.com/arthurbabey/fuzzycocopython/issues"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"
# Use a per-tag build dir to avoid reusing caches across different paths/ABIs
build-dir = "build/{wheel_tag}"

[tool.setuptools.package-data]
fuzzycocopython = ["*.so"]  # Ensure .so files are installed with the package

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["fuzzycocopython"]
combine-as-imports = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
